--- a/MyFlatWPF/View/ManagementView/OrdersByPeriodView.xaml
+++ b/MyFlatWPF/View/ManagementView/OrdersByPeriodView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.OrdersView"
+﻿<UserControl x:Class="MyFlatWPF.View.ManagementView.OrdersByPeriodView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MyFlatWPF.View.ManagementView"
-             xmlns:viewModel="clr-namespace:MyFlatWPF.Commands.ManagementCommand"
+             xmlns:viewModel="clr-namespace:MyFlatWPF.ViewModel.Management"
              mc:Ignorable="d" 
              d:DesignHeight="800" 
              d:DesignWidth="500">
@@ -12,11 +12,15 @@
 
         <Grid.Resources>
 
-            <viewModel:ShowOrdersByServiceNameCommand x:Key="ShowOrdersByServiceNameCommand"/>
+            <viewModel:OrdersByPeriodViewModel x:Key="OrdersByPeriodViewModel"/>
 
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
-                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Height" Value="30"/>
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontWeight" Value="SemiBold"/>
                 <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="Margin" Value="3 0 0 0"/>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="Button">
@@ -32,55 +36,220 @@
                 </Setter>
             </Style>
 
+            <Style x:Key="ButtonByPeriodStyle" TargetType="{x:Type Button}">
+                <Setter Property="Height" Value="30"/>
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontWeight" Value="SemiBold"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="Margin" Value="3 0 0 0"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="3 0 0 3"
+                                    BorderThickness="1 1 0 1"
+                                    BorderBrush="Black"
+                                    Background="DeepSkyBlue">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="DatePickerStyle" TargetType="{x:Type DatePicker}">
+                <Setter Property="Height" Value="30"/>
+                <Setter Property="Width" Value="105"/>
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Background" Value="DeepSkyBlue"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="HorizontalAlignment" Value="Left"/>
+                <Setter Property="Margin" Value="0 0 0 0"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+            </Style>
+
         </Grid.Resources>
-        
+
 
         <Grid.RowDefinitions>
             <RowDefinition Height="15*"/>
-            <RowDefinition Height="15*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="10*"/>
             <RowDefinition Height="140*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock x:Name="tbHeader"
-                   Grid.Row="0"
-                   Grid.ColumnSpan="2"
-                   Text=""
+        <StackPanel x:Name="spHeaders"
+                    Grid.Row="0"
+                    Orientation="Horizontal">
+
+            <TextBlock x:Name="tbHeader"
+                   Text="Orders by :"
                    FontSize="24"
-                   Margin="20 20 0 20">
-            
-        </TextBlock>
+                   Margin="25 20 0 20">
+            </TextBlock>
 
-        <TextBlock x:Name="tbOrdersCount"
-                   Grid.Row="1"
-                   Grid.Column="0"
-                   Text=""
-                   FontSize="20"
-                   Margin="20 0 0 10">
+            <TextBlock x:Name="tbHeaderPeriod"
+                   Text="{Binding PeriodName, 
+                          Source={StaticResource OrdersByPeriodViewModel}}"
+                   FontSize="24"
+                   Margin="5 20 0 20"
+                   HorizontalAlignment="Left">
+            </TextBlock>
 
-        </TextBlock>
+        </StackPanel>
 
-        <Button x:Name="btnBackToBlog"
-                Grid.Row="1"
-                Grid.Column="1"
+        <StackPanel x:Name="spOrdersByPeriod"
+                    Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    Orientation="Horizontal"
+                    VerticalAlignment="Center"
+                    Margin="5 0 0 0">
+
+            <Button x:Name="btnToday"
+                Width="55"
+                Content="Today"
+                Margin="20 0 0 0"
+                ToolTip="Orders for Today"
+                Style="{StaticResource ButtonStyle}">
+            </Button>
+
+            <Button x:Name="btnYesterday"
+                Width="70"
+                Content="Yesterday"
+                ToolTip="Orders for Yesterday"
+                Style="{StaticResource ButtonStyle}">
+            </Button>
+
+            <Button x:Name="btnWeek"
+                Width="50"
+                Content="Week"
+                ToolTip="Orders for Week"
+                Style="{StaticResource ButtonStyle}">
+            </Button>
+
+            <Button x:Name="btnMonth"
+                Width="55"
+                Content="Month"
+                ToolTip="Orders for Month"
+                Style="{StaticResource ButtonStyle}">
+            </Button>
+
+            <Button x:Name="btnByPeriod"
                 Width="80"
-                Height="30"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                Margin="0 0 15 10"
-                Content="Back"
-                ToolTip="To Orders By Service"
-                Style="{StaticResource ButtonStyle}"
-                Command="{Binding BackToOrdersByService, 
-                          Source={StaticResource ShowOrdersByServiceNameCommand}}">
+                Content="Period from"
+                ToolTip="Orders by Period"
+                Style="{StaticResource ButtonByPeriodStyle}">
+            </Button>
 
-        </Button>
+            <DatePicker x:Name="dpDateFrom" 
+                        xml:lang="en-US"  
+                        Style="{StaticResource DatePickerStyle}"
+                        BorderThickness="0 1 0 1"
+                        FirstDayOfWeek="Monday"
+                        Padding="0 5 0 5">
+                <DatePicker.Resources>
+                    <Style TargetType="DatePickerTextBox">
+                        <Setter Property="Text" Value=" Date from"/>
+                        <Setter Property="IsReadOnly" Value="True"/>
+                        <Setter Property="Focusable" Value="False"/>
+                        <Setter Property="Control.Template">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <TextBox x:Name="TextBoxFrom"
+                                             Text="{Binding Path=SelectedDate, 
+                                                    StringFormat='dd.MM.yyyy', 
+                                                    RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}"
+                                             Padding="5 0 0 0"/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </DatePicker.Resources>
+            </DatePicker>
+
+            <Border Height="30"
+                       Width="20"
+                       HorizontalAlignment="Left"
+                       Background="DeepSkyBlue"
+                       BorderBrush="Black"
+                       BorderThickness="0 1 0 1"
+                       VerticalAlignment="Center">
+                <TextBlock Text="to"
+                           Width="20"
+                           FontSize="12"
+                           FontWeight="SemiBold"
+                           Padding="4 0 0 0"
+                           VerticalAlignment="Center">
+                </TextBlock>
+            </Border>
+
+            <DatePicker x:Name="dpDateTo" 
+                        xml:lang="en-US"
+                        Style="{StaticResource DatePickerStyle}"
+                        BorderThickness="0 1 0 1"
+                        FirstDayOfWeek="Monday"
+                        Padding="0 5 0 5">
+                <DatePicker.Resources>
+                    <Style TargetType="DatePickerTextBox">
+                        <Setter Property="Text" Value=" Date to"/>
+                        <Setter Property="IsReadOnly" Value="True"/>
+                        <Setter Property="Focusable" Value="False"/>
+                        <Setter Property="Control.Template">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <TextBox x:Name="TextBoxTo"
+                                             Text="{Binding Path=SelectedDate, 
+                                                    StringFormat='dd.MM.yyyy', 
+                                                    RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}"
+                                             Padding="5 0 0 0"/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </DatePicker.Resources>
+            </DatePicker>
+
+            <Border Height="30"
+                       Width="5"
+                       HorizontalAlignment="Left"
+                       Background="DeepSkyBlue"
+                       BorderBrush="Black"
+                       BorderThickness="0 1 1 1"
+                       CornerRadius="0 3 3 0">
+            </Border>
+
+        </StackPanel>
+
+        <StackPanel x:Name="spCount"
+                    Grid.Row="2"
+                    Orientation="Horizontal">
+
+            <TextBlock x:Name="tbOrdersCountText"
+                   Text="Orders Count :"
+                   FontSize="20"
+                   Margin="25 10 0 0"
+                   VerticalAlignment="Center">
+            </TextBlock>
+
+            <TextBlock x:Name="tbOrdersCount"
+                   Text="{Binding OrdersCount, 
+            Source={StaticResource OrdersByPeriodViewModel},
+            UpdateSourceTrigger=PropertyChanged}"
+                   FontSize="20"
+                       Width="20"
+                   Margin="10 10 0 0"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left">
+            </TextBlock>
+        </StackPanel>
 
         <DataGrid x:Name="dgOrders"
-                  Grid.Row="2"
+                  Grid.Row="3"
                   Grid.ColumnSpan="2"
                   Width="600"
                   Padding="10 0 10 20"
@@ -92,13 +261,13 @@
                   CanUserAddRows="false" 
                   LoadingRow="DataGrid_LoadingRow"
                   ItemsSource="{Binding Orders, 
-            Source={StaticResource ShowOrdersByServiceNameCommand},
+            Source={StaticResource OrdersByPeriodViewModel},
             UpdateSourceTrigger=PropertyChanged}"
                   AutoGenerateColumns="False"
                   Margin="0 10 0 20">
             <DataGrid.Columns>
-                
-            <DataGridTextColumn Header="Id"
+
+                <DataGridTextColumn Header="Id"
                                 Width="20"
                                 IsReadOnly="True"
                                 Binding="{Binding Id,
@@ -124,8 +293,8 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                
-            <DataGridTextColumn Header="Date Create" 
+
+                <DataGridTextColumn Header="Date Create" 
                                 Width="75"
                                 IsReadOnly="True"
                                 Binding="{Binding DateCreate,
@@ -168,7 +337,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                
+
                 <DataGridTextColumn Header="Email"
                                     Width="80"
                                     IsReadOnly="True"
@@ -189,7 +358,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                
+
                 <DataGridTextColumn Header="Mobile"
                                     IsReadOnly="True"
                                 Binding="{Binding Mobile}">
@@ -216,7 +385,7 @@
                                     IsReadOnly="True"
                                 Binding="{Binding Message}">
                     <DataGridTextColumn.HeaderStyle>
-                    <Style TargetType="DataGridColumnHeader">
+                        <Style TargetType="DataGridColumnHeader">
                             <Setter Property="HorizontalContentAlignment" Value="Center"/>
                             <Setter Property="Background" Value="LightGray"/>
                             <Setter Property="BorderThickness" Value="0 1 1 1"/>
@@ -231,7 +400,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                
+
                 <DataGridTextColumn Header="Service Name"
                                     Width="*"
                                     FontSize="10"
@@ -281,7 +450,7 @@
                                       BorderBrush="Transparent"
                                       BorderThickness="0 0 0 0"
                                 ItemsSource="{Binding StatusNames, 
-                                Source={StaticResource ShowOrdersByServiceNameCommand}}"
+                                Source={StaticResource OrdersByPeriodViewModel}}"
                               SelectedItem="{Binding StatusName}"
                                       SelectionChanged="Cb_SelectionChanged"/>
                         </DataTemplate>
