--- a/MyFlatWPF/View/ManagementWindow.xaml
+++ b/MyFlatWPF/View/ManagementWindow.xaml
@@ -142,7 +142,7 @@
                         <Border BorderThickness="0 0 0 0"
                                 Background="Transparent">
                             <Button x:Name="btnOrdersByServices"
-                        Content="Orders By Services"
+                        Content="Orders by Services"
                         Margin="0 10 0 0"
                         Width="140"
                         Style="{StaticResource ButtonExpanderStyle}"
@@ -155,8 +155,8 @@
                             </Button>
                         </Border>
                         <Border BorderThickness="0 0 0 0">
-                            <Button x:Name="btnAllOrders"
-                        Content="All Orders"
+                            <Button x:Name="btnOrdersByPeriod"
+                        Content="Orders by Period"
                         Margin="0 10 0 0"
                         Width="140"
                         Style="{StaticResource ButtonExpanderStyle}"
