--- a/MyFlatWPF/View/ManagementView/RolesView/RoleEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/RolesView/RoleEditView.xaml
@@ -4,10 +4,181 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MyFlatWPF.View.ManagementView.RolesView"
+             xmlns:help="clr-namespace:MyFlatWPF.HelpMethods"
              mc:Ignorable="d" 
              d:DesignHeight="800" 
              d:DesignWidth="600">
-    <Grid>
-            
+    
+    <Grid x:Name="gRoleEdit"
+          Margin="10 0 10 0">
+
+        <Grid.Resources>
+
+            <help:MyMultiValueConverter x:Key="MultiValueConverter"/>
+
+            <Style x:Key="TextBlockHeaderStyle" TargetType="TextBlock">
+                <Setter Property="FontSize" Value="16"></Setter>
+                <Setter Property="Background" Value="LightGray"></Setter>
+                <Setter Property="Height" Value="25"></Setter>
+                <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+            </Style>
+
+            <Style x:Key="BorderStyle" TargetType="Border">
+                <Setter Property="Background" Value="LightSkyBlue"></Setter>
+                <Setter Property="Height" Value="0.5"></Setter>
+            </Style>
+
+            <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="10"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="Padding" Value="5 0 5 0"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+                <Setter Property="BorderThickness" Value="0.75"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border x:Name="border"
+                                    CornerRadius="3"
+                                    Height="20"
+                                    Padding="5 0 5 0"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="DeepSkyBlue">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="ButtonHoverStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="10"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="Padding" Value="5 0 5 0"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border x:Name="border"
+                                    CornerRadius="3"
+                                    Height="20"
+                                    Padding="5 0 5 0"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="#0082ff">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="InputTextBox" TargetType="TextBox">
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="BorderBrush" Value="LightGray"/>
+                <Setter Property="BorderThickness" Value="0.75"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type TextBox}">
+                            <Border
+                        x:Name="border"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        SnapsToDevicePixels="True"
+                                CornerRadius="2">
+                                <ScrollViewer
+                            x:Name="PART_ContentHost"
+                            Focusable="false"
+                            HorizontalScrollBarVisibility="Hidden"
+                            VerticalScrollBarVisibility="Hidden" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <!--<Trigger Property="IsEnabled" Value="false">
+                                    <Setter TargetName="border" Property="Opacity" Value="0.56" />
+                                </Trigger>-->
+                                <Trigger Property="IsMouseOver" Value="true">
+                                    <Setter TargetName="border" Property="BorderBrush" Value="#FF7EB4EA" />
+                                    <Setter TargetName="border" Property="BorderThickness" Value="0.75" />
+                                </Trigger>
+                                <Trigger Property="IsFocused" Value="true">
+                                    <Setter TargetName="border" Property="BorderBrush" Value="Blue" />
+                                    <Setter TargetName="border" Property="BorderThickness" Value="1" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+        </Grid.Resources>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.6*"/>
+            <RowDefinition Height="0.3*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.7*"/>
+            <RowDefinition Height="0.6*"/>
+            <RowDefinition Height="0.6*"/>
+            <RowDefinition Height="9*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock x:Name="tblEditRole"
+                   Text="Edit Role"
+                   FontSize="20"
+                   Margin="0 5 0 5">
+        </TextBlock>
+
+        <Border Grid.Row="1"
+                Margin="0 5 0 0"
+                        Style="{StaticResource BorderStyle}"></Border>
+
+        <TextBlock x:Name="tblRoleName"
+                   Grid.Row="2"
+                   Text="Role Name"
+                   FontSize="16"
+                   Margin="0 10 0 5">
+        </TextBlock>
+
+        <TextBox x:Name="tbRoleName"
+                 Grid.Row="3"
+                 Width="200"
+                 HorizontalAlignment="Left">
+        </TextBox>
+
+        <Label x:Name="lErrorRoleName"
+               Grid.Row="3"
+               FontSize="12"
+               Foreground="Red"
+               Margin="210 0 0 0">
+        </Label>
+
+        <Button x:Name="btnChangeRoleName"
+                Grid.Row="4"
+                Content="Change"
+                ToolTip="Change role"
+                HorizontalAlignment="Left"
+                Margin="0 5 0 0"
+                Style="{Binding Source={StaticResource ButtonStyle}}">
+            <Button.CommandParameter>
+                <MultiBinding Converter="{StaticResource MultiValueConverter}">
+                    <Binding ElementName="tbRoleName"/>
+                    <Binding ElementName="lErrorRoleName"/>
+                </MultiBinding>
+            </Button.CommandParameter>
+        </Button>
+
     </Grid>
 </UserControl>
